--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -9,38 +10,139 @@ body {
 
 .sidebar {
   height: 100vh;
-  width: 15vw;
+  width: 20vw;
   position: fixed;
-  background-color: gold;
+  border: solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidebar>nav>ul {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 main {
-  margin-left: 15vw;
-  width: 85vw;
+  margin-left: 20vw;
+  width: 80vw;
   overflow: scroll;
 }
 
-.connor-jones {
+header {
+  height: 20vh;
+  background: transparent;
+  border: solid black;
+}
+
+section {
   height: 100vh;
-  background-color: aqua;
+  border: solid black;
+}
+
+.connor-jones {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.name {
+  font-weight: 900;
+  font-size: 72px;
+}
+
+.subhead-one {
+  font-weight: 700;
+  font-size: 1.7rem;
+}
+
+.subhead-two {
+  font-weight: 500;
+  font-size: 1.3rem;
+}
+
+.subhead-three {
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.subhead-four {
+  font-weight: 300;
+  font-size: 0.9rem;
+}
+
+.subhead-five {
+  font-weight: 200;
+  font-size: 0.8rem;
 }
 
 .about {
-  height: 100vh;
-  background-color: bisque;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+.about-body {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skills {
+  width: 100%;
+  height: 50%;
+  display: flex;
+}
+
+.tech {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tech-skills {
+  width: 40%;
+  height: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.languages {
+  height: 100%;
+}
+
+.languages>ul {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.other-tech {
+  width: 40%;
+  height: 100%;
+}
+
+.other {
+  width: 40%;
+}
+
+
 .experience {
-  height: 100vh;
-  background-color: blueviolet;
+
 }
 
 .projects {
-  height: 100vh;
-  background-color: coral;
+
 }
 
 .contact {
-  height: 100vh;
-  background-color: darkgreen;
+
 }
