--- a/styles/main2.css
+++ b/styles/main2.css
@@ -167,7 +167,7 @@ main {
   position: absolute;
   right: 0;
   height: 100%;
-  width: 60px;
+  width: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -200,7 +200,81 @@ main {
   position: absolute;
   left: 0;
   height: 100%;
-  width: calc(100% - 60px);
+  width: calc(100% - 50px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+
+.projects-container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.projects-home-snippet {
+  position: absolute;
+  top: 0;
+  height: 25vh;
+  width: 100vw;
+  background-color: tomato;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+}
+
+.projects-page {
+  position: absolute;
+  bottom: 0;
+  height: 75vh;
+  width: 100vw;
+  background-color: turquoise;
+  z-index: 5;
+}
+
+.projects-home-tab {
+  position: absolute;
+  top: 0;
+  height: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 1;
+  font-size: 1.2rem;
+  transition: background-color .4s, transform .3s;
+}
+
+.projects-home-tab:hover {
+  background-color: gainsboro;
+  transform: scale(1.05);
+}
+
+.projects-home-tab>i {
+  margin-right: 15px;
+  display: flex;
+  justify-content: center;
+}
+
+.projects-home-tab>h4 {
+  display: flex;
+  align-items: center;
+}
+
+.projects-contents {
+  position: absolute;
+  bottom: 0;
+  height: calc(100% - 50px);
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
