--- a/styles/main2.css
+++ b/styles/main2.css
@@ -13,6 +13,10 @@ body {
   align-items: center;
 }
 
+li {
+  list-style: none;
+}
+
 .site-open {
   width: 100vw;
   display: flex;
@@ -32,27 +36,81 @@ main {
 }
 
 .about {
-  width: 60%;
+  width: calc(100vw - 120px);
+  height: calc(100vh - 60px);
+  position: fixed;
+  top: 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 0 10px 10px;
+  background: rgb(171,228,230);
+  background: linear-gradient(0deg, rgba(171,228,230,1) 45%, rgba(255,255,255,1) 78%);
 }
 
 .home-pic {
   height: auto;
-  max-width: 25%;
-  margin-bottom: 15px;
+  max-width: 16%;
+  min-width: 150px;
+  margin: 30px 0 15px 0;
   border-radius: 50%;
   border: thin solid black;
 }
 
 .snippet-pic {
   height: auto;
-  max-width: 35%;
+  max-width: 32%;
+  min-width: 80px;
+  margin-bottom: 15px;
   border-radius: 50%;
-  border: thin solid black;
+}
+
+.snippet-pic-horizontal {
+  max-width: 8%;
+  min-width: 90px;
+  border-radius: 50%;
 }
 
 .connor-jones {
-  margin-bottom: 10px;
+  margin-bottom: 4px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.software-engineer {
+  width: 90px;
+  padding-top: 8px;
+  margin-bottom: 25px;
+  overflow: visible;
+  white-space: nowrap;
+  display: flex;
+  justify-content: center;
+  border-top: thin solid black;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+
+.about-engineering, .about-experience {
+  width: 75%;
+  margin-bottom: 16px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.connect {
+  width: 90px;
+  margin: 7px 0 30px 0;
+  font-size: 28px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 
@@ -65,12 +123,93 @@ main {
   right: 0;
   height: 100vh;
   width: 25vw;
-  background-color: tomato;
+  padding: 2% 0;
+  background-color: rgb(136, 202, 171);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 5;
+}
+
+.snippet-top {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 5;
+}
+
+.snippet-name {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1px;
+  margin-bottom: 2px;
+}
+
+.snippet-title {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.85rem;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  margin-bottom: 7px;
+}
+
+.snippet-connect {
+  width: 60px;
+  font-size: 22px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.snippet-bottom {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 0.9rem;
+  z-index: 5;
+}
+
+.language-db-container {
+  height: 50%;
+  width: 90%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.languages {
+  height: 100%;
+}
+
+.languages>h4 {
+  height: 20%;
+  text-decoration: underline;
+}
+
+.languages>ul {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.libraries-frameworks {
+  height: 50%;
+}
+
+.libraries-frameworks>h4, .databases>h4 {
+  height: 20%;
+  text-decoration: underline;
+}
+
+.libraries-frameworks>ul, .databases>ul {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .experience-page {
@@ -90,12 +229,14 @@ main {
   justify-content: center;
   cursor: pointer;
   z-index: 1;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
   font-size: 1.2rem;
   transition: background-color .4s, transform .3s;
 }
 
 .experience-tab:hover {
-  background-color: gainsboro;
+  background-color: rgb(238, 238, 238);
   transform: scale(1.05);
 }
 
@@ -123,11 +264,13 @@ main {
   cursor: pointer;
   z-index: 1;
   font-size: 1.2rem;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
 
 .experience-home-tab:hover {
-  background-color: gainsboro;
+  background-color: rgb(238, 238, 238);
   transform: scale(1.05);
 }
 
@@ -154,7 +297,8 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: turquoise;
+  background: rgb(171,228,230);
+  background: linear-gradient(270deg, rgba(171,228,230,1) 10%, rgba(255,255,255,1) 95%);
 }
 
 
@@ -164,26 +308,97 @@ main {
 
 
 
-.projects-home-snippet {
+.work-home-snippet {
   position: absolute;
   top: 0;
   height: 20vh;
   width: 100vw;
-  background-color: tomato;
+  padding: 0 4%;
+  background-color: rgb(136, 202, 171);
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
   z-index: 5;
 }
 
-.projects-page {
+.snippet-left {
+  display: flex;
+}
+
+.snippet-info-horizontal {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.snippet-name-horiontal {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1px;
+  margin-bottom: 2px;
+}
+
+.snippet-title-horizontal {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.85rem;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  padding-left: 3px;
+}
+
+.snippet-connect-horizontal {
+  width: 60px;
+  font-size: 22px;
+  padding-left: 3px;
+}
+
+.snippet-right {
+  width: 500px;
+  min-width: 330px;
+  height: 80%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.8rem;
+}
+
+.horizontal-languages {
+  height: 100%;
+}
+
+.horizontal-languages>h4 {
+  height: 20%;
+  text-decoration: underline;
+}
+
+.horizontal-languages>ul {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.horizontal-libraries-frameworks>h4, .horizontal-databases>h4 {
+  height: 20%;
+  text-decoration: underline;
+}
+
+.horizontal-libraries-frameworks>ul, .horizontal-databases>ul {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.work-page {
   position: absolute;
   bottom: 0;
   width: 100vw;
   z-index: 5;
 }
 
-.projects-tab {
+.work-tab {
   position: absolute;
   top: 0;
   height: 60px;
@@ -193,26 +408,28 @@ main {
   cursor: pointer;
   z-index: 2;
   font-size: 1.2rem;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
 
-.projects-tab:hover {
-  background-color: gainsboro;
+.work-tab:hover {
+  background-color: rgb(238, 238, 238);
   transform: scale(1.05);
 }
 
-.projects-tab>i {
+.work-tab>i {
   margin-right: 15px;
   display: flex;
   align-items: center;
 }
 
-.projects-tab>h4 {
+.work-tab>h4 {
   display: flex;
   align-items: center;
 }
 
-.projects-home-tab {
+.work-home-tab {
   position: absolute;
   top: 0;
   height: 40px;
@@ -222,26 +439,28 @@ main {
   cursor: pointer;
   z-index: 1;
   font-size: 1.2rem;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
 
-.projects-home-tab:hover {
-  background-color: gainsboro;
+.work-home-tab:hover {
+  background-color: rgb(238, 238, 238);
   transform: scale(1.05);
 }
 
-.projects-home-tab>i {
+.work-home-tab>i {
   margin-right: 15px;
   display: flex;
   align-items: center;
 }
 
-.projects-home-tab>h4 {
+.work-home-tab>h4 {
   display: flex;
   align-items: center;
 }
 
-.projects-contents {
+.work-contents {
   position: absolute;
   bottom: 0;
   height: calc(100% - 40px);
@@ -250,7 +469,8 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: turquoise;
+  background: rgb(171,228,230);
+  background: linear-gradient(180deg, rgba(171,228,230,1) 10%, rgba(255,255,255,1) 95%);
 }
 
 
@@ -270,6 +490,8 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
   z-index: 5;
 }
 
@@ -291,11 +513,13 @@ main {
   cursor: pointer;
   z-index: 1;
   font-size: 1.2rem;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
 
 .contact-tab:hover {
-  background-color: gainsboro;
+  background-color: rgb(238, 238, 238);
   transform: scale(1.05);
 }
 
@@ -324,11 +548,13 @@ main {
   cursor: pointer;
   z-index: 1;
   font-size: 1.2rem;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
 
 .contact-home-tab:hover {
-  background-color: gainsboro;
+  background-color: rgb(238, 238, 238);
   transform: scale(1.05);
 }
 
@@ -355,4 +581,19 @@ main {
   justify-content: center;
   align-items: center;
   background-color: turquoise;
+}
+
+
+
+
+@media (max-width: 730px) {
+  .media-hide {
+    display: none;
+  }
+  .connor-jones {
+    font-size: 28px;
+  }
+  .software-engineer {
+    font-size: 16px;
+  }
 }
