--- a/styles/main2.css
+++ b/styles/main2.css
@@ -56,7 +56,7 @@ main {
   min-width: 150px;
   margin: 30px 0 15px 0;
   border-radius: 50%;
-  border: thin solid black;
+  border: thin solid grey;
 }
 
 .snippet-pic {
@@ -74,24 +74,24 @@ main {
 }
 
 .connor-jones {
-  margin-bottom: 4px;
+  margin-bottom: 3px;
   font-family: 'Montserrat', sans-serif;
-  font-size: 40px;
+  font-size: 32px;
   font-style: normal;
   font-weight: 600;
 }
 
 .software-engineer {
   width: 90px;
-  padding-top: 8px;
-  margin-bottom: 25px;
+  /* padding-top: 8px; */
+  margin-bottom: 15px;
   overflow: visible;
   white-space: nowrap;
   display: flex;
   justify-content: center;
-  border-top: thin solid black;
+  /* border-top: thin solid black; */
   font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   letter-spacing: 3px;
@@ -99,20 +99,27 @@ main {
 
 .about-engineering, .about-experience {
   width: 75%;
-  margin-bottom: 16px;
+  margin: 16px 0 10px 0;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 1px;
 }
 
+.about-engineering {
+  margin-bottom: 4px;
+}
+
 .connect {
-  width: 90px;
+  width: 130px;
   margin: 7px 0 30px 0;
   font-size: 28px;
   display: flex;
   justify-content: space-evenly;
 }
 
+.connect>a {
+  color: black;
+}
 
 
 
@@ -156,10 +163,14 @@ main {
 }
 
 .snippet-connect {
-  width: 60px;
+  width: 90px;
   font-size: 22px;
   display: flex;
   justify-content: space-evenly;
+}
+
+.snippet-connect>a {
+  color: black;
 }
 
 .snippet-bottom {
@@ -175,7 +186,7 @@ main {
 .language-db-container {
   height: 50%;
   width: 90%;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   display: flex;
   justify-content: space-evenly;
 }
@@ -187,6 +198,7 @@ main {
 .languages>h4 {
   height: 20%;
   text-decoration: underline;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .languages>ul {
@@ -203,6 +215,7 @@ main {
 .libraries-frameworks>h4, .databases>h4 {
   height: 20%;
   text-decoration: underline;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .libraries-frameworks>ul, .databases>ul {
@@ -210,6 +223,10 @@ main {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+}
+
+.libraries-frameworks>ul>li, .databases>ul>li {
+  margin-bottom: 2px;
 }
 
 .experience-page {
@@ -229,7 +246,6 @@ main {
   justify-content: center;
   cursor: pointer;
   z-index: 1;
-  font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.5px;
   font-size: 1.2rem;
   transition: background-color .4s, transform .3s;
@@ -264,7 +280,6 @@ main {
   cursor: pointer;
   z-index: 1;
   font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
@@ -293,16 +308,38 @@ main {
   left: 0;
   height: 100%;
   width: calc(100% - 45px);
+  padding: 14px 4%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  overflow: scroll;
+  font-size: 0.8rem;
   background: rgb(171,228,230);
   background: linear-gradient(270deg, rgba(171,228,230,1) 10%, rgba(255,255,255,1) 95%);
 }
 
+.experience-education {
+  margin-bottom: 10px;
+  text-decoration: underline;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1.1px;
+}
 
+.experience-contents>div {
+  margin-bottom: 25px;
+}
 
+.experience-contents>div>h2 {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1px;
+}
+
+.experience-contents>div>p {
+  margin-bottom: 4px;
+}
+
+.resume {
+  font-weight: 700;
+}
 
 
 
@@ -349,13 +386,17 @@ main {
 }
 
 .snippet-connect-horizontal {
-  width: 60px;
+  width: 90px;
   font-size: 22px;
   padding-left: 3px;
 }
 
+.snippet-connect-horizontal>a {
+  color: black;
+}
+
 .snippet-right {
-  width: 500px;
+  width: 520px;
   min-width: 330px;
   height: 80%;
   display: flex;
@@ -408,7 +449,6 @@ main {
   cursor: pointer;
   z-index: 2;
   font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
@@ -439,7 +479,6 @@ main {
   cursor: pointer;
   z-index: 1;
   font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
@@ -469,10 +508,78 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 0.9rem;
   background: rgb(171,228,230);
   background: linear-gradient(180deg, rgba(171,228,230,1) 10%, rgba(255,255,255,1) 95%);
 }
 
+.work-contents>h1 {
+  height: 10%;
+  margin: 15px 0 10px 0;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1.3px;
+  text-decoration: underline;
+}
+
+.applications {
+  height: 80%;
+  width: 100%;
+  padding: 0 15vw;
+  overflow: scroll;
+}
+
+.app-container {
+  height: 50vh;
+  width: 70vw;
+  margin-bottom: 5vh;
+  padding: 25px;
+  background-color: rgba(206, 205, 205, 0.6);
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.app-snapshot {
+  background-color: white;
+  height: 100%;
+  width: 70%;
+  border-radius: 5px;
+}
+
+.travelwise-snapshot {
+  background-image: url("https://lh3.googleusercontent.com/O_7vG2ooZZIlRFU2D26waJ0zKWSGu1BwV6D5ZvBhenYI3VylBFh90Majh4YQ23GA77hmSWm7tWM24YmxRrHFtaPHYwD66YJ68dbg5p1eBsYsqRRTTOe6AlKxLrT70Ny8qGcwTKQImW9EiDEjmhSOztJhd8eawKL0kaim8fTao2dMn4b7eiDU6V6gUwGlJMF7yacM4J6rdZZUpX6cLg5Gm1r8KXIiLAE4tgemZU1cvIiBIVQW3qAtPDDQmK_0gVlPJ7hV_32n6VO4BEs4hGEpYyWvbuPzslFn2wVl-VMXrdsNYDrbYEiNQ1UVR7EtdD7GDJyMNztdqx-FZQuf7VUioh7n059lcXIj7vQVfz3D4BsRIyUhkU1EnsnPHXn5bCxdH18WAwZMbb-4Jhh3g3TG6nKeMhCRBXlc_xVjDVTu9uT7YOomFml6AUEDSuMKHqErx4RL0yRjDM3ZsN3ggerJZEl-mmQtTENl0fXX_qZdEoNWxFJS7W9ETkOPhpWv3Ypvo6zx4RbaJppf8_FyuW2pXT-BnE74Ak_Vmkupc3Z1a_B_qozsQ7KJtsOAWJyuKP9IQv_iRrLedD3ungWEj9Rci00SgOywZXViFno6ZcfmnaoGBu9q8EPXzlHlgfNVaIDzSDVCdv3RQlVRA4cQCEneRb48h2mP-nWlIaytH6jeuogQgXuC0jnVNdHgRwJ9=w1292-h722-no?authuser=0");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.match-mix-snapshot {
+  background-image: url("https://lh3.googleusercontent.com/wksimrAzcJHxqfIZdcSIEUyq1LONikLdoQn_3ADeHFYT6RUXftaGmprsPxKsNBpGuzwtRx703PmJE0E3M7ncnsIVQxKY_5F_PAIqmGkQ2B546sp5mK6ALsyhQTMBTD_dY7f8rq-wlhq-gMST7mnc3PSapYTTCjshCZ7ej0B8BkRG3itwrZ73uTa8qNiX-UOh6nGeamzmtC37jNK4RsRMqjEVQjb0399nJjNEjxkv3TPf370Km7Xrx82qFAhRMToolJAsT6QxdFrb6jd2pL-vgTGskvB2d95TpbNKTQMVpziV9aPoYY5NwyGyYlJOqrj406ILjHgCT0w5w-ntIanlcXrrtuvLd_iUxvlx_b-7DmzgA0gdp8GvDa6dyY68fyg_v7ijjAt6lZ6KpIAaImRxUA9Ojx0ZLqsIXnSonN_pz6tiDVFq6_Ttf_DBFU1EOWVjYcqYT8xBkN1FZk2Bpn1Xd21c1AhaJl9r9irINWlhakkzfCA1AlBYaJdZOb5XRmPDwtX90tWSImTS5irYh_OgJd0-889hX7uDR9vWXyvIIxykyOugXJscLPf34FH8-ZYP4ytY5mqhhbqxh2K59XrrgH_JEeawuf2sHCybrShYONnBA7LQ_WJQKR9qgHC_c3WhlUs8STTa-8zQ5LrkM-pCDwATUxYOb32QeTZoMDMSi50DrT6zHtJXYtOEx3RC=w2310-h1320-no?authuser=0");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.app-info {
+  height: 100%;
+  width: 27%;
+  margin-left: 3%;
+}
+
+.app-info>h2 {
+  margin-bottom: 7px;
+  font-size: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1.3px;
+  text-decoration: underline;
+}
+
+.app-info>p {
+  margin-bottom: 7px;
+}
+
+.app-info>ul>li {
+  margin-bottom: 3px;
+}
 
 
 
@@ -513,7 +620,6 @@ main {
   cursor: pointer;
   z-index: 1;
   font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
@@ -548,7 +654,6 @@ main {
   cursor: pointer;
   z-index: 1;
   font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.5px;
   transition: background-color .4s, transform .3s;
 }
@@ -586,7 +691,7 @@ main {
 
 
 
-@media (max-width: 730px) {
+@media (max-width: 755px) {
   .media-hide {
     display: none;
   }
